--- a/project.config.json
+++ b/project.config.json
@@ -11,6 +11,8 @@
 	"libVersion": "1.9.94",
 	"appid": "touristappid",
 	"projectname": "%E7%94%B5%E5%95%86",
+	"simulatorType": "wechat",
+	"simulatorPluginLibVersion": {},
 	"condition": {
 		"search": {
 			"current": -1,
@@ -29,7 +31,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 4,
+			"current": -1,
 			"list": [
 				{
 					"id": -1,
@@ -58,7 +60,8 @@
 				{
 					"id": -1,
 					"name": "左侧导航test",
-					"pathName": "pages/test/test"
+					"pathName": "pages/test/test",
+					"query": ""
 				}
 			]
 		}
